--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="script.js" defer></script>
 
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://use.fontawesome.com/05f9009fe4.js"></script>
     <script src="https://kit.fontawesome.com/63a581d50e.js" crossorigin="anonymous"></script>
-
 
 	<title> Andrew Kwok </title>
 </head>
@@ -37,13 +36,20 @@
 	<nav class="navbar">
 		<h1> Drew_ </h1>
 		<ul class="nav-links">
+			<li id="lightdark-symbol" style="margin-right: 10px; transform: scale(1.3); transform: rotate(135deg)"> &#9788; </li>
+			<li> 
+				<label class="switch">
+					<input type="checkbox" id="lightdark-toggle">
+					<span class="slider"> </span> 
+				</label>
+			</li>
 			<li> <a href="#"> Home </a> </li>
 			<li> <a href="#study"> Study </a> </li>
 			<li> <a href="#contact"> Contact </a> </li> 
 		</ul>
 	</nav>
 
-	<section class="container d-flex" style="background-color: #eee">
+	<section id="self-info" class="container d-flex">
 		<div class="self-info">
 			<ul class="title" data-aos="fade-up"> 
 				<li> <h1> Allow Me to Introduce Myself </h1> </li>
