--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<nav class="navbar">
 		<h1> Drew_ </h1>
 		<ul class="nav-links">
-			<li id="lightdark-symbol" style="margin-right: 10px; transform: scale(1.3); transform: rotate(135deg)"> &#9788; </li>
+			<li id="lightdark-symbol"> &#9788; </li>
 			<li> 
 				<label class="switch">
 					<input type="checkbox" id="lightdark-toggle">
