--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			<h1> Reach Me Out! </h1>
 
 			<ul class="contact-list">
-				<li> <a href="mailto:andrewkwok.2604@gmail.com"> <i id="contact-email"class="contact fa fa-envelope"></i> </a> </li>
+				<li> <a href="mailto:andrew.andrew@mail.utoronto.ca"> <i id="contact-email"class="contact fa fa-envelope"></i> </a> </li>
 				<li> <a href="https://github.com/Andrew-Kwok"> <i id="contact-git" class="contact fa fa-github"></i> </a> </li>
 				<li> <a href = "https://www.instagram.com/andrewkwok__/"> <i id="contact-ig"class="contact fa fa-instagram"></i> </a> </li>
 				<li> <a href="https://www.linkedin.com/in/andrew-kwok-33a6b7184/"> <i id="contact-li"class="contact fa fa-linkedin"></i> </a> </li>
