--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="self-info">
 			<ul class="title" data-aos="fade-up"> 
 				<li> <h1> Allow Me to Introduce Myself </h1> </li>
-				<li> <h2> ... or check my CV instead </h2> </li>
+				<li> <h2> ... or check my <a href="https://drive.google.com/file/d/15wDL5Kk0milQbCVI0LqxOTVdB-xBw1EG/view?usp=share_link" style="text-decoration: underline; color: black;">CV</a> instead </h2> </li>
 			</ul>
 
 			<ul class="info1" data-aos="fade-right">
